# termplex

./: Cargo.toml  LICENSE-APACHE  README.md  SOLO.MD  capture_full_1775188554.txt  layout.json
src/: client.rs  lib.rs  main.rs  protocol.rs  server.rs  terminal.rs  widgets.rs  window.rs
