[package]
name = "termplex"
version = "0.1.0"
authors = ["Fredrik Andersson <fredrikandersson@mac.com>"]
description = "A terminal multiplexer"
license = "MIT OR Apache-2.0"
edition = "2024"
repository = "https://github.com/fredrikandersson/termplex"
readme = "README.md"
keywords = ["terminal", "multiplexer", "tui", "window-manager"]
categories = ["command-line-utilities"]

[[bin]]
name = "termplex"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
bincode = "1.3.3"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29.0"
portable-pty = "0.9.0"
ratatui = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50.0", features = ["full"] }
vt100 = "0.16.2"
